--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-          distribution: 'temurin'
+          java-version: '17'
+          distribution: 'adopt'
 
       - name: Build with Gradle
         run: ./gradlew build
